<resources>
    <string name="app_name">Remote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="device_name">Device name</string>
    <string name="menu_name">JTC-X40A-WL</string>
    <string name="menu_btn">Scan</string>
    <string name="menu_copyright">JETEC ELECTRONICSCO.,LTD.</string>
    <string name="app_bar">Device information</string>
    <string name="bluetoothset">Device setting</string>
    <string name="app_message">Do you want to close this app?</string>
    <string name="app_message_b1">Exit</string>
    <string name="app_message_b2">Cancel</string>
    <string name="action_settings">Disconnect</string>
    <string name="disconnectdevice">Disconnect device</string>
    <string name="settimes">Set Time</string>
    <string name="support">This BLE device is not support!</string>
    <string name="BLE_adp">Bluetooth not open!</string>
    <string name="no_device">No device</string>
    <string name="search_device">Searching…</string>
    <string name="search_complete">Complete!</string>
    <string name="mes_title">Open positioning</string>
    <string name="mes_mess">This Android version must to open positioning that can searching BLE devices.</string>
    <string name="mes_yes">Yes</string>
    <string name="mes_no">No</string>
    <string name="connect_err">Connect error! Please try again!</string>
    <string name="disconnect">Disconnect!</string>
    <string name="T">Temperature</string>
    <string name="H">Humidity</string>
    <string name="C">CO2</string>
    <string name="I1">1st</string>
    <string name="I2">2nd</string>
    <string name="I3">3rd</string>
    <string name="PV1">offset</string>
    <string name="PV2">offset</string>
    <string name="PV3">offset</string>
    <string name="EH1">alarm max</string>
    <string name="EH2">alarm max</string>
    <string name="EH3">alarm max</string>
    <string name="EL1">alarm min</string>
    <string name="EL2">alarm min</string>
    <string name="EL3">alarm min</string>
    <string name="CR1">color change</string>
    <string name="CR2">color change</string>
    <string name="CR3">color change</string>
    <string name="ADR">Address</string>
    <string name="DPP">Decimal point</string>
    <string name="DPP_status_on">DPP+On</string>
    <string name="DPP_status_off">DPP+Off</string>
    <string name="IH1">1st max range</string>
    <string name="IL1">1st min range</string>
    <string name="IH2">2nd max range</string>
    <string name="IL2">2nd min range</string>
    <string name="IH3">3rd max range</string>
    <string name="IL3">3rd min range</string>
    <string name="IH">Max range</string>
    <string name="IL">Min range</string>
    <string name="SPK">Alter</string>
    <string name="DP1">decimal point</string>
    <string name="DP2">decimal point</string>
    <string name="DP3">decimal point</string>
    <string name="COUNT">Data record</string>
    <string name="INTER">Log interval</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="LOG">Log record</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="butoon_yes">OK</string>
    <string name="butoon_no">CANCEL</string>
    <string name="wrong">Wrong value!</string>
    <string name="MAX">Do not lower than Min!</string>
    <string name="MIN">Do not higher than Max!</string>
    <string name="changename">Device name</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="download">Download</string>
    <string name="dialog">Dialog</string>
    <string name="closedialog">Close</string>
    <string name="savedialog">Save set up</string>
    <string name="namedialog">Data name</string>
    <string name="adddialog">Add</string>
    <string name="listdialog">Data list</string>
    <string name="deldialog">Delete</string>
    <string name="updialog">Modify</string>
    <string name="addblank">Do not blank!</string>
    <string name="loadbar">Load set up</string>
    <string name="listdata">No data</string>
    <string name="change">Modify name</string>
    <string name="name">Name</string>
    <string name="same">Have the same name</string>
    <string name="warn">Warning! It must cost a lot of times</string>
    <string name="prepare">System preparing</string>
    <string name="password">Please enter your password</string>
    <string name="passwordlenth">Must be six bytes</string>
    <string name="connecting">Connecting</string>
    <string name="login">Login...</string>
    <string name="inputerror">Input error</string>
    <string name="geterror">Please try again!</string>
    <string name="passworderror">Password error</string>
    <string name="modifypassword">Modify password</string>
    <string name="original">Original password</string>
    <string name="news">New password</string>
    <string name="samepassword">Error! The new password is same as original</string>
    <string name="samepassword2">Error! The new password is same as visitor</string>
    <string name="samepassword3">Error! This password can not be use</string>
    <string name="success">Modify success!</string>
    <string name="originalpassworderror">Original password error!</string>
    <string name="reconnecting">Disconnect! System auto reconnecting!</string>
    <string name="logdata">There is no data!</string>
    <string name="temperature">temperature</string>
    <string name="humidity">humidity</string>
    <string name="chosedialog">Dialog</string>
    <string name="listdialogdata">List data</string>
    <string name="export">Export</string>
    <string name="chartlist">Chose chart</string>
    <string name="Combine">Combine chart</string>
    <string name="Temperature">Temperature</string>
    <string name="Humidity">Humidity</string>
    <string name="datetime">Date and Time</string>
    <string name="size">Recode number</string>
    <string name="Co2">CO2</string>
    <string name="datalog">Data List</string>
    <string name="send_to">Chose an app what you want to share with.</string>
    <string name="condition1">Item</string>
    <string name="condition2">Delimit</string>
    <string name="condition3">Value</string>
    <string name="value_edit">Input a value</string>
    <string name="screening">Data screening</string>
    <string name="searching">Search</string>
    <string name="setdate">Set date</string>
    <string name="timerange">Range</string>
    <string name="description">The time interval must be between 30 seconds and 1 hour</string>
    <string name="formatwrong">Time format error</string>
    <string name="year">Year:</string>
    <string name="month">Month:</string>
    <string name="day">Day:</string>
    <string name="hour">Hour:</string>
    <string name="minute">Minute:</string>
    <string name="seconds">Seconds:</string>
    <string name="initialization">Initialization settings, please wait…</string>
    <string name="showjetec">www.jetec.com.tw</string>
    <string name="showremote">Jetec Remote</string>
    <string name="datadownload">Download data</string>
    <string name="showdialog">Show dialog</string>
    <string name="interval">Interval</string>
    <string name="warning">Warning!</string>
    <string name="stoprecord">It will stop the record and start downloading.</string>
    <string name="I1row">1st data</string>
    <string name="I2row">2nd data</string>
    <string name="I3row">3rd data</string>
    <string name="I4row">4th data</string>
    <string name="I5row">5th data</string>
    <string name="I6row">6rd data</string>
    <string name="UL">upper limit</string>
    <string name="LL">lower limit</string>
    <string name="intervalset">Setting…</string>
    <string name="reinterval">It will stop records and clean all records data.</string>
    <string name="restart">It will restart records and clean all records data.</string>
    <string name="pdftime">Time</string>
    <string name="pdf1st">1st</string>
    <string name="pdf2nd">2nd</string>
    <string name="pdf3rd">3rd</string>
    <string name="pdfT">T</string>
    <string name="pdfH">H</string>
    <string name="pdfC">CO2</string>
    <string name="report">Data report</string>
    <string name="choose">Choose the export method</string>
    <string name="CSV">CSV</string>
    <string name="PDF">PDF</string>
    <string name="view">report</string>
    <string name="PDFreport">PDF report</string>
    <string name="print">Print</string>
    <string name="process">Under processing</string>
    <string name="cant_reconnect">Lose Bluetooth signal, please reconnected!</string>
    <string name="downloadfail">Data is incomplete whitch was download fail, please try it again!</string>
    <string name="stable">Stable</string>
    <string name="highspeed">HighSpeed</string>
    <string name="choseway">Choose the way of download</string>
    <string name="chosewaymessage">High speed only useful on advanced hardware device</string>
    <string name="complete">Complete</string>
    <string name="quick">Quick set</string>
    <string name="errmodel">Model has not been initialized</string>
    <string name="modelnum">Please enter the model number</string>
    <string name="bt_t">Temperature\n(-10~65℃)</string>
    <string name="bt_h">Humidity\n(0~100%)</string>
    <string name="bt_c">CO2\n(0~2000ppm)</string>
    <string name="bt_d">CO2\n(0~3000ppm)</string>
    <string name="bt_e">CO2\n(0~5000ppm)</string>
    <string name="bt_co">CO\n(?~?ppm)</string>
    <string name="bt_pm">PM2.5\n(0~1000ppm)</string>
    <string name="pm">PM2.5</string>
    <string name="bt_i">Analogy\n(4~20mA)</string>
    <string name="table_i">Analogy</string>
    <string name="bt_time">YTime\n(Year/Month/Day)</string>
    <string name="bt_ztime">ZTime\n(Year/Month/Day)</string>
    <string name="bt_log">Download\n(LOG record)</string>
    <string name="bt_back">back</string>
    <string name="bt_reset">reset</string>
    <string name="engin_mode">Engin mode</string>
    <string name="RL1">Alarm1</string>
    <string name="RL2">Alarm2</string>
    <string name="RL3">Alarm3</string>
    <string name="dpp">Decimal place</string>
    <string name="chose">None</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="out">4~20mA\nOutput</string>
    <string name="output">Output</string>
    <string name="send">Send</string>
    <string name="loading">Loading</string>
</resources>
